--- a/package.json
+++ b/package.json
@@ -16,8 +16,23 @@
         "devinstall": "npm install -D parcel gulp sass http-server",
         "frontinstall": "npm install uuid lodash",
         "static": "npx gulp",
-        "dev": "npm run static && npx parcel src/index.html"
+        "dev": "npm run static && npx parcel src/index.html",
+        "git":"git add . && git push -u origin main"
+  },"repository": {
+    "type": "git",
+    "url": "git+https://github.com/bcaron1000/todolistapp.git"
   },
+  "keywords": [
+    "to",
+    "do",
+    "list"
+  ],
+  "author": "Bryan Caron",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/bcaron1000/todolistapp/issues"
+  },
+  "homepage": "https://github.com/bcaron1000/todolistapp#readme",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.0.0",
     "http-server": "^14.0.0",
@@ -27,6 +42,8 @@
   "dependencies": {
     "gulp": "^4.0.2",
     "lodash": "^4.17.21",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2"       
+
+    
   }
 }
