--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "name": "bryanstodolistapp",
   "version": "1.0.0",
-  "description": "to do list ui app",
-  "default": "index.js",
+  "description": "to do list app",
+  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "rm -rf .parcel-cache dist && npm run static && npx parcel build src/index.html && npx parcel src/index.html",
-    "build": "npm run static && npx parcel build src/index.html",
-    "clean": "rm -rf node_modules",
-    "reinstall": "npm run clean && npm install",
-    "clean:dev": "rm -rf .parcel-cache dist",
-    "clean:git": "rm -rf .parcel-cache dist  node_modules",
-    "startup": "mkdir src src/scss src/js src/css src/data src/assets",
-    "index": "touch src/index.html src/js/index.js src/scss/styles.scss",
-    "devinstall": "npm install -D parcel gulp sass http-server",
-    "frontinstall": "npm install uuid lodash",
-    "static": "npx gulp",
-    "dev": "npm run static && npx parcel src/index.html"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "rm -rf .parcel-cache dist && npm run static && npx parcel build src/index.html && npx parcel src/index.html",
+        "build": "npm run static && npx parcel build src/index.html",
+        "clean": "rm -rf node_modules",
+        "reinstall": "npm run clean && npm install",
+        "clean:dev": "rm -rf .parcel-cache dist",
+        "clean:git": "rm -rf .parcel-cache dist  node_modules",
+        "startup": "mkdir src src/scss src/js src/css src/data src/assets",
+        "index": "touch src/index.html src/js/index.js src/scss/styles.scss",
+        "devinstall": "npm install -D parcel gulp sass http-server",
+        "frontinstall": "npm install uuid lodash",
+        "static": "npx gulp",
+        "dev": "npm run static && npx parcel src/index.html"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bcaron1000/bryanstodolistapp.git"
+    "url": "git+https://github.com/bcaron1000/todolistapp.git"
   },
   "keywords": [
     "to",
@@ -31,18 +31,7 @@
   "author": "Bryan Caron",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/bcaron1000/bryanstodolistapp/issues"
+    "url": "https://github.com/bcaron1000/todolistapp/issues"
   },
-  "homepage": "https://github.com/bcaron1000/bryanstodolistapp#readme",
-  "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.0",
-    "gulp": "^4.0.2",
-    "http-server": "^14.0.0",
-    "parcel": "^2.0.0",
-    "sass": "^1.43.4"
-  },
-  "dependencies": {
-    "lodash": "^4.17.21",
-    "uuid": "^8.3.2"
-  }
+  "homepage": "https://github.com/bcaron1000/todolistapp#readme"
 }
