--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "description": "to do list app",
   "default": "index.js",
   "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "rm -rf .parcel-cache dist && npm run static && npx parcel build src/index.html && npx parcel src/index.html",
-        "build": "npm run static && npx parcel build src/index.html",
-        "clean": "rm -rf node_modules",
-        "reinstall": "npm run clean && npm install",
-        "clean:dev": "rm -rf .parcel-cache dist",
-        "clean:git": "rm -rf .parcel-cache dist  node_modules",
-        "startup": "mkdir src src/scss src/js src/css src/data src/assets",
-        "index": "touch src/index.html src/js/index.js src/scss/styles.scss",
-        "devinstall": "npm install -D parcel gulp sass http-server",
-        "frontinstall": "npm install uuid lodash",
-        "static": "npx gulp",
-        "dev": "npm run static && npx parcel src/index.html"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "rm -rf .parcel-cache dist && npm run static && npx parcel build src/index.html && npx parcel src/index.html",
+    "build": "npm run static && npx parcel build src/index.html",
+    "clean": "rm -rf node_modules",
+    "reinstall": "npm run clean && npm install",
+    "clean:dev": "rm -rf .parcel-cache dist",
+    "clean:git": "rm -rf .parcel-cache dist  node_modules",
+    "startup": "mkdir src src/scss src/js src/css src/data src/assets",
+    "index": "touch src/index.html src/js/index.js src/scss/styles.scss",
+    "devinstall": "npm install -D parcel gulp sass http-server",
+    "frontinstall": "npm install uuid lodash",
+    "static": "npx gulp",
+    "dev": "npm run static && npx parcel src/index.html"
   },
   "repository": {
     "type": "git",
@@ -32,5 +32,16 @@
   "bugs": {
     "url": "https://github.com/bcaron1000/bryanstodolistapp/issues"
   },
-  "homepage": "https://github.com/bcaron1000/bryanstodolistapp#readme"
+  "homepage": "https://github.com/bcaron1000/bryanstodolistapp#readme",
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.0",
+    "gulp": "^4.0.2",
+    "http-server": "^14.0.0",
+    "parcel": "^2.0.0",
+    "sass": "^1.43.4"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "uuid": "^8.3.2"
+  }
 }
